// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders RTL styling correctly 1`] = `
<ol
  className="c-breadcrumb is-rtl "
  data-garden-id="breadcrumbs.list"
  data-garden-version="version"
/>
`;

exports[`List renders default styling correctly 1`] = `
<ol
  className="c-breadcrumb "
  data-garden-id="breadcrumbs.list"
  data-garden-version="version"
/>
`;
